<resources>
    <string name="app_name">gratuity_app</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="how_was_a_gratuity">How was a gratuity?</string>
    <string name="payment">Payment</string>
    <string name="ok_15">OK (15%)</string>
    <string name="good_18">Good (18%)</string>
    <string name="amazing_20">Amazing (20%)</string>
    <string name="round_numbers">Round numbers</string>
    <string name="gratuity_result">Gratuity: %s</string>
</resources>